# logparser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
log_parser/: __init__.py  config.py  main.py  models.py  utils.py
logparser/: __init__.py  config.py  database.py  main.py  models.py  parser.py  utils.py  writer.py
notebooks/: analytics.ipynb  requirements.txt
