[project]
name = "logparser"
authors = [
    { name = "Jochen Klar", email = "mail@jochenklar.de" },
]
maintainers = [
    { name = "Jochen Klar", email = "mail@jochenklar.de" },
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    'Operating System :: OS Independent',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12'
]
dependencies = [
    "python-dotenv",
    "structlog",
    "user-agents"
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/jochenklar/logparser"

[project.optional-dependencies]
geoip2 = [
    "geoip2"
]
sqlalchemy = [
    "SQLAlchemy"
]
postgres = [
    "psycopg2-binary"
]

[project.scripts]
logparser = "logparser.main:main"

[tool.setuptools]
packages = ["logparser"]

[tool.setuptools.dynamic]
version = { attr = "logparser.__version__" }

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "PGH",  # pygrep-hooks
    "RUF",  # ruff
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020
]
ignore = [
    "B006",   # mutable-argument-default
    "B007",   # unused-loop-control-variable
    "B018",   # useless-expression
    "RUF012", # mutable-class-default
]

[tool.ruff.isort]
known-first-party = [
    "logparser"
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]
